--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -170,8 +170,7 @@ Second Run:
   + [log density of normal mixture, variance ratio](log_gmm_concave_ratio.html)
 * [log density of laplace mixture](log_lmm_concave.html)
 * [normal mean penalty plots](normal_mean_penalty.html)
-* [Solve normal mean problem using optimization - compund penalty](normal_mean_penalized_optimization.html)
-* [Solve normal mean problem using optimization - inversion method](normal_mean_penalized_optimization_inversion.html)
+* [Solve normal mean problem using optimization - compund and inversion penalty](normal_mean_penalized_optimization.html)
 * [Solve normal mean problem using optimization - also estimate prior mean](normal_mean_penalized_optimization_prior_mean.html)
 * [normal mean penalty plots, when $s^2$ depends on posterior mean](normal_mean_penalty_glm_simplified.html)
 * [normal mean penalty plots, when $s^2$ depends on posterior mean, penalty exlcuding $\log(2\pi s^2)/2$ ](remove_log_in_penalty.html)
