--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -25,8 +25,7 @@ editor_options:
 
 ### Simulation 
 
-* [Splitting method in PMF](PMF_splitting.html)
-* [PMF splitting simulation](PMF_splitting_simulation.html)
+* [Splitting method in PMF, simple simulation example](PMF_splitting.html)
 * [Simulation based on PBMC data, 3 cell types](simulation_based_on_pbmc_3cell.html)
 * [Simulation based on PBMC data, 3 cell types, 1 init backfitting](splitting_PMF_1backfitinit.html)
 * [Simulation pbmc data from fasttopics, nonnegtive L and F](simu_pbmc_fasttpoics_nonnegLF.html)
@@ -114,42 +113,16 @@ With Run time Comparison:
 
 * [The splitting method smoothing overdispersed count data](poisson_nugget_two_step.html)
 * [Poisson smooth splitting local optimum](poisson_smooth_split_local_optimum.html)
+
 ### Real data
 
 * [Smooth RNA seq](splitting_smooth_RNAseq.html)
 
 ### Bechmarking smoothing methods
 
-I benchmarked methods on the following smooth functions.
 
-* [Angles](smooth_angles_benchmark_new.html)
-* [Bursts](smooth_bursts_benchmark_new.html)
-* [heavisine](smooth_heavisine_benchmark_new.html)
-* [simple blocks](smooth_sblocks_benchmark_new.html)
-* [clipped blocks](smooth_cblocks_benchmark_new.html)
-* [Spike](smooth_spike_benchmark_new.html)
 
-Below are some old results. Specifically the smooth functions are in the log-space. (So after exp they may look different than their name originally suggest.)
-
-I picked up some methods that are performing better and reduce the plot size for better illustration.
-
-* [Angles](smooth_angles_benchmark_simplified.html)
-* [simple blocks](smooth_sblocks_benchmark_simplified.html)
-* [spike](smooth_spike_benchmark_simplified.html)
-
-First Run:
-
-* [heavisine](smooth_heavi_benchmark.html)
-* [blocks](smooth_blocks_benchmark.html)
-
-Second Run:
-
-* [Angles](smooth_angles_benchmark.html)
-* [Bursts](smooth_bursts_benchmark.html)
-* [heavisine](smooth_heavisine_benchmark.html)
-* [simple blocks](smooth_sblocks_benchmark.html)
-* [clipped blocks](smooth_cblocks_benchmark.html)
-* [Spike](smooth_spike_benchmark.html)
+[Some old results](smoothing_simu_2022.html)
 
 ### Details
 
